tests/dbg_cases/imports/errors/dbg_import_error_collision/math2.csm
// Math module - version 2 (conflict)
i32 add(i32 x, i32 y) {
    return x + y + 100;
}
